--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<tr>
 		<td width="389">
 		<p align="center">
-		<a href="http://jyunming-chen.github.io/tutsplus/tutsplus0.html">
-		tutsplus0.html</a></p></td>
+		<a href="http://file:///C:/Program%20Files/Git/frieza/gphw1.html">
+		hw1.html</a></p></td>
 		</tr>
 	</tbody></table>
 <script>
